<resources>
    <string name="app_name">constprogram</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strAppName">Haitian Event</string>
    <string name="strWelcomeSignUp">Welcome</string>
    <string name="strEmailSignUp">Email</string>
    <string name="app_icon">App Icon</string>
    <string name="strContinue">Continue</string>
    <string name="strPassword">Password</string>
    <string name="strEmail">Email</string>
    <string name="strLogin" translatable="false">Login</string>
    <string name="strForgotPassword">Forget Password ?</string>
    <string name="strRequestAccount">Don\'t have an account ?</string>
    <string name="strCreateAccount">"Create One."</string>
    <string name="strFindEventWelcome" translatable="false">"Find nearby events "</string>
    <string name="strButtonLogin" translatable="false">Login</string>
    <string name="strEventTitle">Event Title</string>
    <string name="strEventType">Type of event</string>
    <string name="strOrganizer">Organizer</string>
    <string name="strStartDate">Start Date</string>
    <string name="strEndDate">End Date</string>
    <string name="strStartTime">Start Time</string>
    <string name="strEndTime">End Time</string>
    <string name="strAddress">Pick Address</string>
    <string name="strNext">Next</string>
    <string name="strAddress2">"    Pick Address"</string>
    <string name="strEventSummary" translatable="false">Event Summary</string>
    <string name="strImageEvent">Image</string>

    <string name="strCtnGoogle">Continue with Google</string>
    <string name="strCtnFacebook">Continue with Facebook</string>
    <string name="strEmailSignup">Email</string>
    <string name="strPasswordEnter">Password</string>
    <string name="strConfirmPassword">Confirm password</string>
    <string name="strFirstName">First name</string>
    <string name="strLastName">Last name</string>

    <string name="strTitle">Title</string>
    <string name="strSignUp" translatable="false">Sign up</string>
    <string name="strDateProgramList"></string>
    <string name="strNameProgramList"></string>
    <string name="strNameOrganizerList"></string>
    <string name="strAdressProgramList"></string>


    <string name="strCompany">Company</string>
    <string name="strTerm">"        I accept ConstEvent Term of Service
        and Privacy Policy"</string>
    <string name="strGender">Gender</string>
    <string name="strMale">Male</string>
    <string name="strFemale">Female</string>


    <string name="facebook_application_id" translatable="false">2349772061993406</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2349772061993406</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="strNavHome">Home</string>
    <string name="strNavDashboard">Dashboard</string>
    <string name="strBtnMainFragment">Main Fragment</string>
    <string name="strnavDashboard">Dashbpard</string>
    <string name="strDashboardTab">Dashboard</string>
    <string name="strListProgramTab">Program list</string>
    <string name="strMyProgramTab">My program</string>
    <string name="strFollower">Followers</string>
    <string name="strFollowings" />
    <string name="strFollowing">Followings</string>
    <string name="strExit">Exit</string>
    <string name="strFavorite">Favorite</string>
    <string name="strWhotofollow">Who to follow?</string>
    <string name="strSubscription">Subscription</string>
    <string name="strHistory">History</string>
    <string name="strConfiguration">Configuration</string>
    <string name="strAccount">Account</string>
    <string name="strMethodofpayment">Method of payment</string>
    <string name="strSettings">Settings</string>
    <string name="strHelpandComments">Help and Comments</string>
    <string name="strAboutWichEvent">About WichEvent</string>
    <string name="strProbleme">Describe your issue</string>
    <string name="strSendComment">Send comments</string>
    <string name="AllArticles">browse through all articles</string>
    <string name="strTxtModePayment">Ajouter un mode de paiment pour effectuer vos prochains achats rapidement et en toute simplicite</string>
    <string name="strAddModPayment">Add a method of payment</string>
    <string name="strCreditCard">"        Add a credit or a debit
        card"</string>
    <string name="strOtherOption">Other Options</string>
    <string name="strOtherSettingPayment">"       Other settings of
        payment"</string>
    <string name="strprivacysettings">"     Privacy settings"</string>
    <string name="strLanguage">"     Language"</string>
    <string name="strUserdatapolicy">"     User data policy"</string>
    <string name="strCopyright">"     Copyright"</string>
    <string name="strTermsofuse">"     Terms of use"</string>
    <string name="strLogOut">Log out</string>
    <string name="strChooseLanguage">Choose a language:</string>
    <string name="stridEnglish">English</string>
    <string name="strFrench">French</string>
    <string name="strSpanish">Spanish</string>
    <string name="strCreole">Creole</string>
    <string name="strImportantArticle">Important articles</string>



</resources>
