<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_blue"
            android:title="@string/strNavHome" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite_star_blue"
            android:title="@string/strFavorite" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/follow_blue"
            android:title="@string/strWhotofollow" />
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/subscribe_blue"
            android:title="@string/strSubscription" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_blue"
            android:title="@string/strHistory" />


        <item android:title="@string/strConfiguration">
            <menu>
                <item
                    android:id="@+id/nav_compte"
                    android:icon="@drawable/account"
                    android:title="@string/strAccount" />
                <item
                    android:id="@+id/nav_modepaiment"
                    android:icon="@drawable/pay_blue"
                    android:title="@string/strMethodofpayment" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/settings_blue"
                    android:title="@string/strSettings" />
            </menu>
        </item>

        <item android:title="WichEvent information">
            <menu>
                <item
                    android:id="@+id/nav_help_comment"
                    android:icon="@drawable/question"
                    android:title="@string/strHelpandComments" />
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/about"
                    android:title="@string/strAboutWichEvent" />
                <item
                    android:id="@+id/nav_quit"
                    android:icon="@drawable/quit"
                    android:title="@string/strExit" />
            </menu>
        </item>

    </group>


</menu>