<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventInformationFirstActivity">


    <EditText
        android:id="@+id/event_title_id_info"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="@drawable/eventinfoinput"

        android:ems="10"
        android:gravity="top"
        android:hint="@string/strEventTitle"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <EditText
        android:id="@+id/event_type_id_info"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="@drawable/eventinfoinput"
        android:ems="10"

        android:hint="@string/strEventType"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <EditText
        android:id="@+id/organizer_id_info"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="@drawable/eventinfoinput"

        android:ems="10"
        android:hint="@string/strOrganizer"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_date_id_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/eventinfoinput"
            android:gravity="center"
            android:onClick="onClickDate"
            android:padding="20dp"
            android:text="@string/strStartDate" />

        <TextView
            android:id="@+id/end_date_id_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/eventinfoinput"
            android:gravity="center"
            android:onClick="onClickDate2"
            android:padding="20dp"
            android:text="@string/strEndDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_time_id_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/eventinfoinput"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/strStartTime" />

        <TextView
            android:id="@+id/end_time_id_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/eventinfoinput"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/strEndTime" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_address_id_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="#EEEEEE"
        android:drawableLeft="@drawable/icon_maps_google"
        android:gravity="center|left"
        android:paddingLeft="20dp"
        android:text="@string/strAddress2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/buttoninfo"
        android:text="@string/strNext"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="signOut"/>


</LinearLayout>