<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingLeft="50dp"
    android:paddingTop="20dp"
    android:paddingRight="50dp"
    tools:context=".ui.MethodPaymentFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/payment" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/strTxtModePayment"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/linedrawable" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strAddModPayment"
        android:textColor="#E6000000" />

    <Button
        android:id="@+id/id_add_card_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:drawableStart="@drawable/favorite"
        android:text="@string/strCreditCard"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/linedrawable" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strOtherOption"
        android:textColor="#E6000000" />

    <Button
        android:id="@+id/id_other_setting_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="#00FFFFFF"
        android:drawableStart="@drawable/favorite"
        android:text="@string/strOtherSettingPayment"
        android:textAlignment="textStart"
        android:textSize="16sp" />

</LinearLayout>