<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventInformationSecondActivity">


    <EditText
        android:id="@+id/event_summary_id_info"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/eventinfoinput"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/strEventSummary"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/id_image_event_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/eventinfoinput"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="2dp"
        android:text="@string/strImageEvent" />

    <Button
        android:id="@+id/event_finish_id_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttoninfo"
        android:text="@string/strNext"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="signOut"

        />

</LinearLayout>